<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Sunshine</string>
    <string name="hello_world">Hello world!</string>

    <string name="action_settings">Settings</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_help">Help</string>
    <string name="action_map">Map Location</string>
    <string name="action_share">Share</string>


    <string name="title_activity_detail">DetailActivity</string>


    <string name="pref_location_default">Chittagong</string>
    <string name="pref_location_key">location</string>
    <string name="pref_location_label">Location</string>


    <string name="pref_temperature_imperial">imperial</string>
    <string name="pref_temperature_metric">metric</string>

    <string name="pref_temperature_default">metric</string>
    <string name="pref_temperature_key">units</string>

    <string name="pref_temperature_title">Temperature Units</string>

    <string name="degree">°</string>


</resources>
