<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <EditTextPreference
        android:defaultValue="@string/pref_location_default"
        android:inputType="text"
        android:key="@string/pref_location_key"
        android:singleLine="true"
        android:title="@string/pref_location_label" />

    <ListPreference
        android:defaultValue="@string/pref_temperature_default"
        android:entries="@array/temperature_units"
        android:entryValues="@array/temperature_units_values"
        android:key="@string/pref_temperature_key"
        android:title="@string/pref_temperature_title" />


    <!--<ListPreference
        android:defaultValue="metric"

        // User will get the list of selection from the specified array.
        android:entries="@array/temperature_units"

        // Values associated with the list of selection e.g Metric (\u2103) -> metric
        android:entryValues="@array/temperature_units_values"

        android:key="units"
        android:title="Temperature Units" />-->


</PreferenceScreen>